# texas-art-excursion

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.notes/: troubleshooting.txt
python/src/: kimbell_art_museum.py
python/src/app/: kimbell_art_museum.py
python/src/metadata/: models.py  museum_info.py
python/tests/e2e/kimbell_art_museum/: test_kimbell_art_museum_e2e.py
python/tests/integration/: test_kimbell_art_museum_int.py
python/tests/integration/data/: kimbell_monet_no_filters.html
python/tests/unit/: test_kimbell_art_museum.py  test_kimbell_art_museum_unit.py
scripts/: set-env-vars.sh
