[tool.pytest.ini_options]
pythonpath = [
  ".", "python/src"
]
[tool.poetry]
name = "texas-art-excursion"
version = "0.1.0"
description = ""
authors = ["Elizabeth Stewart <elizaveta.stewart@gmail.com>"]
readme = "README.md"
packages = [{include = "python/src"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
